--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   <div class="app">
     <h1>🏢 Cond. You Saúde</h1>
 
+    <button onclick="location.href='academia.html'">🏋️ Academia</button>
     <button onclick="location.href='atelie.html'">🎨 Ateliê</button>
-    <button onclick="location.href='brinquedoteca.html'">🧸 Brinquedoteca</button>
     <button onclick="location.href='pets.html'">🛁 Banho pets</button>
+    <button onclick="location.href='brinquedoteca.html'">🧸 Brinquedoteca</button>
     <button onclick="location.href='cinema.html'">🎬 Cinema</button>
     <button onclick="location.href='equipe.html'">👥 Equipe</button>
     <button onclick="location.href='garagem.html'">🗺️ Mapa das vagas da garagem</button>
     <button onclick="location.href='piscina.html'">🏊 Piscina</button>
     <button onclick="location.href='jogos.html'">🎮 Salão de jogos</button>
-	<button onclick="location.href='sauna.html'">🔥 Sauna seca</button>
+    <button onclick="location.href='sauna.html'">🔥 Sauna seca</button>
 
   </div>
   <footer class="footer">
