--- a/academia.html
+++ b/academia.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <div class="app">
-    <h2>🧸 Brinquedoteca</h2>
+    <h2>🏋️ Academia</h2>
 
     <p>
-      Espaço destinado às crianças.<br>
+      Espaço destinado à atividade física.<br>
 	  Retirar as chaves na portaria.<br>
-      Horário: 8h às 22h.<br>
-	  Acesso: Morador + 2 convidados.<br>
+      Horário: 6h às 00h.<br>
+	  Acesso: Morador maior de 16 anos.<br>
 	  ⚠️Proibido: Aparelhos sonoros sem fone de ouvido, fumar, consumir alimentos, bebidas alcoólicas e permanência de animais.<br><br>
       Após o uso, manter o local organizado.
     </p>
@@ -22,4 +22,5 @@
     <button onclick="history.back()">⬅ Voltar</button>
   </div>
 </body>
+
 </html>
