--- a/academia.html
+++ b/academia.html
@@ -14,7 +14,7 @@
       Espaço destinado à atividade física.<br>
 	  Retirar as chaves na portaria.<br>
       Horário: 6h às 00h.<br>
-	  Acesso: Morador maior de 16 anos.<br>
+	  Acesso: Somente moradores (+16).<br>
 	  ⚠️Proibido: Aparelhos sonoros sem fone de ouvido, fumar, consumir alimentos, bebidas alcoólicas e permanência de animais.<br><br>
       Após o uso, manter o local organizado.
     </p>
@@ -24,3 +24,4 @@
 </body>
 
 </html>
+
